--- a/grunt/package.json
+++ b/grunt/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-yuidoc": "~0.5.0",
     "grunt-contrib-nodeunit": "~0.2.2",
-    "grunt-contrib": "~0.8.0"
+    "grunt-contrib": "~0.8.0",
+    "grunt-este-watch": "~0.1.10"
   }
 }
